--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MoviePop!</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/grids-responsive-min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
